<resources>
    <string name="app_name">Pop Movies</string>

    <!-- Content descriptions -->
    <string name="cnt_movie_poster">Movie poster</string>
    <string name="cnt_favorite_button">Favorite button</string>
    <string name="cnt_tmdb_logo">The Movie Database logo</string>
    <string name="cnt_sort_icon">Sort icon</string>
    <string name="cnt_trailer_thumbnail">Trailer thumbnail</string>
    <string name="cnt_play_button">Play button</string>
    <string name="cnt_star_icon">Star icon</string>
    <string name="cnt_clock_icon">Clock icon</string>

    <!-- Placeholders -->
    <string name="placeholder_title">Title</string>
    <string name="placeholder_year">2015</string>
    <string name="placeholder_duration">120min</string>
    <string name="placeholder_rating">8/10</string>
    <string name="placeholder_plot">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam maximus fermentum tempus. Ut massa sem, iaculis a velit ac, ornare.</string>

    <!-- Labels -->
    <string name="lbl_trailers">Trailers</string>
    <string name="lbl_sort_by">Sort by</string>
    <string name="lbl_no_connection">No connection</string>
    <string name="lbl_credits">Credits</string>
    <string name="lbl_reviews">Reviews</string>
    <string name="lbl_see_all">SEE ALL</string>

    <string name="msg_powered_by_tmdb">This product uses the TMDb API but is not endorsed or certified by TMDb.</string>
    <string name="msg_tmdb_link">https://www.themoviedb.org/</string>
    <string name="msg_no_video_app">No app found to play video</string>

</resources>
